# parser-with-c

./: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  Makefile  README.md  build.sh  source.c
cmake/: aarch64-linux-clang.cmake  x86_64-linux-clang.cmake  x86_64-windows-mingw.cmake
src/: CMakeLists.txt  iter.c  iter.h  list.c  list.h  main.c  mstream.c  mstream.h  node.c  node.h  parse.c  parse.h  parser.c  parser.h  scan.c  scan.h  scanner.c  scanner.h  token.c  token.h  util.c  util.h
test/: main.c  test.h  test_list.c  test_suite.c
